test/files/neg/interop_classmanifests_arenot_concretetypetags.check
interop_classmanifests_arenot_concretetypetags.scala:5: error: No ConcreteTypeTag available for T
    println(implicitly[ConcreteTypeTag[T]])
                      ^
one error found
